<resources>
    <string name="app_name">App immo</string>
    <string name="login_label_fb_google">Sign with your google account or facebook</string>
    <string name="fb" translatable="false">Facebook</string>
    <string name="google" translatable="false">Google</string>
    <string name="login_email" translatable="false">email</string>
    <string name="login_password">passwond</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="registration_input_hint">Name</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_name">Name :</string>
    <string name="label_ville">Ville :</string>
    <string name="label_contact">Contact :</string>
    <string name="immo_adresse_label">adresse :</string>
    <string name="immo_date_label">Date :</string>
    <string name="immo_label_status">Status :</string>
    <string name="immo_empty_value">Empty</string>
    <string name="immo_btn_ok">OK</string>
    <string name="immo_btn_cancel">Cancel</string>
    <string name="immo_offline_mode">Offline Mode</string>
    <string name="immo_langage">Langage</string>
    <string name="hint_name">Name</string>
    <string name="hint_adresse">Adress</string>
    <string name="hint_date">Date</string>
    <string name="hint_status">Status</string>
    <string name="hint_price">Price</string>
    <string name="home_create_title">Create your home</string>
    <string name="title_settings">Settings</string>
    <string name="immo_log_out">Log out</string>
    <string name="immo_home_title">Our Best House</string>
    <string name="enter_password_error">The password is empty</string>
    <string name="enter_email_error">The email is empty</string>
    <string name="error_registration">There is error with your registration</string>
    <string name="error_login">The email or the password is wrong</string>
    <string name="immo_status_ko">Not Valid</string>
    <string name="immo_status_ok">Valid</string>

    <string-array name="langage_array">
        <item >Malgache</item>
        <item>French</item>
        <item>English</item>

    </string-array>

    <string-array name="langage_array_value">
        <item >mg</item>
        <item>fr</item>
        <item>en</item>

    </string-array>

</resources>
