<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="or.appimmo.betombo.appimmo.Login">

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="330dp"
        android:layout_marginLeft="-22dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="71dp"
        app:layout_constraintHorizontal_bias="0.593">


        <TextView
            android:id="@+id/logen_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="gravity" />

        <TextView
            android:id="@+id/login_labe_facebook_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_label_fb_google"
            android:textAlignment="gravity"
            />




        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/immo_fb_link"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fb"
                android:layout_marginRight="40dp"
                android:textAlignment="gravity"
                android:gravity="left"

                />

             <TextView
                android:id="@+id/immo_google_link"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="gravity"
                 android:layout_marginLeft="40dp"
                android:gravity="right"
                android:text="@string/google" />


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
