<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="or.appimmo.betombo.appimmo.Settings">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="82dp"
            android:gravity="center"
            android:text="@string/immo_langage"
            android:textAlignment="gravity" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView11"
            android:layout_marginEnd="105dp"
            android:layout_marginRight="105dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:layout_below="@+id/textView11"
            android:layout_marginTop="45dp"
            android:text="@string/immo_offline_mode" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView13"
            android:layout_alignBottom="@+id/textView13"
            android:layout_alignLeft="@+id/spinner"
            android:layout_alignStart="@+id/spinner"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="8.5dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/spinner"
            android:layout_alignStart="@+id/spinner"
            android:layout_below="@+id/checkBox"
            android:layout_marginTop="102dp"
            android:text="@string/immo_btn_ok" />

    </RelativeLayout>
</FrameLayout>
