<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/immo_card_view"
    android:onClick="showDetails"
    android:layout_margin="10dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >


        <ImageView
            android:id="@+id/immo_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/immo_house"
            android:layout_weight="1"

            />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/description_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/immo_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textAlignment="gravity"
                android:gravity="center_horizontal"
                android:layout_margin="100dp"


                />
            <TextView
                android:id="@+id/immo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immo_empty_value"
                android:textAlignment="gravity"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toRightOf="@id/immo_name_label"
                />


            <TextView
                android:id="@+id/immo_ville_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immo_adresse_label"
                android:textAlignment="gravity"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/immo_name"
                />

            <TextView
                android:id="@+id/immo_ville"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immo_empty_value"
                android:textAlignment="gravity"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toRightOf="@id/immo_ville_label"
                app:layout_constraintTop_toBottomOf="@id/immo_name"
                />


            <TextView
                android:id="@+id/immo_contact_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_contact"
                android:textAlignment="gravity"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/immo_ville"
                >
            </TextView>

            <TextView
                android:id="@+id/immo_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immo_empty_value"
                android:textAlignment="gravity"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toRightOf="@id/immo_contact_label"
                app:layout_constraintTop_toBottomOf="@id/immo_ville"

                >

            </TextView>


            <RatingBar

                android:id="@+id/immo_rating"
                app:layout_constraintTop_toBottomOf="@id/immo_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:rating="4"
                android:numStars="5"

                />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/immo_id_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/immo_empty_value" />
</android.support.v7.widget.CardView>
