<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="or.appimmo.betombo.appimmo.Detail">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/immo_image"
            android:layout_width="match_parent"
            android:layout_height="256dp"

            app:srcCompat="@drawable/immo_house" />

        <RatingBar
            android:textAlignment="gravity"
            android:layout_gravity="center"
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            />

        <TextView
            android:id="@+id/immo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/immo_empty_value"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_weight="0.48">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="19dp"
                android:text="@string/immo_adresse_label" />

            <TextView
                android:id="@+id/immo_adresse_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView3"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@+id/textView3"
                android:text="@string/immo_empty_value" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView3"
                    android:layout_alignStart="@+id/textView3"
                    android:layout_below="@+id/textView3"
                android:text="@string/immo_date_label" />

            <TextView
                android:id="@+id/immo_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/immo_adresse_label"
                android:layout_alignStart="@+id/immo_adresse_label"
                android:layout_below="@+id/immo_adresse_label"
                android:text="@string/immo_empty_value" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:text="@string/immo_label_status" />

            <TextView
                android:id="@+id/immo_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/immo_date"
                android:layout_alignStart="@+id/immo_date"
                android:layout_below="@+id/immo_date"
                android:text="@string/immo_empty_value" />

            <TextView
                android:id="@+id/immo_price"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@+id/immo_adresse_label"
                android:layout_toRightOf="@+id/immo_adresse_label"
                android:gravity="center_horizontal|center"
                android:text="@string/immo_empty_value"
                android:textAlignment="gravity"

                />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_below="@+id/textView7"
                android:text="@string/label_contact" />

            <TextView
                android:id="@+id/immo_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immo_empty_value"
                android:layout_below="@+id/immo_status"
                android:layout_alignLeft="@+id/immo_status"
                android:layout_alignStart="@+id/immo_status" />

        </RelativeLayout>

        <TextView
            android:id="@+id/immo_body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/immo_empty_value"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_weight="0.23" />

    </LinearLayout>
</FrameLayout>
