<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="or.appimmo.betombo.appimmo.Home">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="343dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="204dp"
                android:layout_height="233dp"
                app:srcCompat="@drawable/immo_house" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >


                <TextView
                    android:id="@+id/immo_adresse_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"

                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:text="@string/immo_adresse_label" />

                <TextView
                    android:id="@+id/immo_adresse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/immo_adresse_label"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@+id/immo_adresse_label"
                    android:text="@string/immo_empty_value" />

                <TextView
                    android:id="@+id/immo_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/immo_adresse_label"
                    android:layout_alignStart="@+id/immo_adresse_label"
                    android:layout_below="@id/immo_adresse_label"
                    android:text="@string/immo_date_label" />


                <TextView
                    android:id="@+id/immo_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/immo_date_label"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@+id/immo_date_label"
                    android:text="@string/immo_empty_value" />

                <TextView
                    android:id="@+id/immo_status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/immo_date_label"
                    android:layout_alignStart="@+id/immo_date_label"
                    android:layout_below="@id/immo_date_label"
                    android:text="@string/immo_label_status" />


                <TextView
                    android:id="@+id/immo_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/immo_status_label"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@+id/immo_date_label"
                    android:text="@string/immo_empty_value" />


                <TextView
                    android:id="@+id/immo_contact_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/immo_status_label"
                    android:layout_alignStart="@+id/immo_status_label"
                    android:layout_below="@id/immo_status_label"
                    android:text="@string/label_contact" />


                <TextView
                    android:id="@+id/immo_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/immo_contact_label"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@+id/immo_contact_label"
                    android:text="@string/immo_empty_value" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/immo_image_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/immo_house" />
            <ImageView
                android:id="@+id/immo_image_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/immo_house2" />
            <ImageView
                android:id="@+id/immo_image3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/immo_house3" />
            <ImageView
                android:id="@+id/immo_image4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/immo_house4" />
        </LinearLayout>

    </LinearLayout>




</FrameLayout>
